--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "url": "https://github.com/SchoolOfCode/node-101-workshop-valedov/issues"
   },
   "homepage": "https://github.com/SchoolOfCode/node-101-workshop-valedov#readme",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "chalk": "^5.0.0"
+  }
 }
